# recommendation-website

./: .gitignore
backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: user.rs
backend/migration/src/: lib.rs  m20250419_192352_add_uuid_pk_User.rs  m20250524_055221_make_username_unique.rs
backend/src/: main.rs  passwordEncryption.rs  server.rs
backend/src/database/: connection.rs
backend/src/models/: jwt.rs  user.rs
backend/src/routes/: auth.rs  home.rs  mod.rs  profile.rs  routes.rs
backend/src/services/: mod.rs
backend/src/services/auth/: auth.rs  errors.rs  password.rs
backend/src/services/jwt_auth/: jwt_auth.rs
backend/src/services/profile/: errors.rs  profile.rs
backend/src/utils/: cookies.rs  errors.rs  jwt.rs  mod.rs
backend_axum/: Cargo.toml
backend_axum/entity/: Cargo.toml
backend_axum/entity/src/: mod.rs  prelude.rs  user.rs
backend_axum/migration/: Cargo.toml
backend_axum/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250419_192352_add_uuid_pk_User.rs  m20250524_055221_make_username_unique.rs
backend_axum/src/: main.rs  server.rs
backend_axum/src/database/: connection.rs
backend_axum/src/models/: jwt.rs  mod.rs  user.rs
backend_axum/src/routes/: auth.rs  home.rs  mod.rs  profile.rs  refresh.rs  routes.rs
backend_axum/src/services/: mod.rs
backend_axum/src/services/auth/: auth.rs  errors.rs  mod.rs  password.rs
backend_axum/src/services/jwt_auth/: jwt_auth.rs
backend_axum/src/services/profile/: errors.rs  mod.rs  (+1 more)
backend_axum/src/utils/: cookies.rs  errors.rs  jwt.rs  jwt_helper.rs  mod.rs
backend_django/: db.sqlite3
backend_django/api/: models.py  serializer.py  urls.py  views.py
backend_django/backend_django/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js
frontend/src/: App.tsx  index.css  main.tsx  test.js
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: router.tsx
frontend/src/types/: navItems.ts  react-select-country-list.d.ts  user.ts
(+26 files in other folders)
