[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
bcrypt = "0.17.0"
dotenvy = "0.15.7"
http = "1.3.1"
sea-orm = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serve = "0.0.1"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
