[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.0", features = ["typed-header", "cookie", "cookie-private"] }
bcrypt = "0.17.0"
chrono = "0.4.40"
cookie = "0.16"
dotenvy = "0.15.7"
entity = { path = "entity" }
env_logger = "0.9"
headers = "0.4.0"
http = "1.3.1"
jsonwebtoken = "9.3.1"
log = "0.4"
migration = { path = "migration" } 
sea-orm = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serve = "0.0.1"
thiserror = "2.0.12"
tokio = { version = "1.36.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
tower-sessions = "0.8.0"
uuid = { version = "1.6", features = ["v7"] }
